# agamemnon

./: CMakeLists.txt  LICENSE.txt  README.md
scripts/: command_reference.json  test_arithmetic.json  test_basic.json
src/: commands.cpp  commands.h  expressions.cpp  expressions.h  logging.cpp  logging.h  main.cpp  memory_region.cpp  memory_region.h  memory_region_stub.cpp  script_context.cpp  script_context.h  script_exception.cpp  script_exception.h  textutils.cpp  textutils.h  variable.cpp  variable.h
